<resources>
    <string name="app_name">Media Watch List</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="add_title">Title</string>
    <string name="add_genres">Tags / Genres</string>
    <string name="add_runtime_tv">Amount of episodes</string>
    <string name="add_release_date">Release date (YYY-MM-DD)</string>
    <string name="add_runtime_movie">Runtime (in minutes)</string>
    <string name="add_progress_tv">Current episode</string>
    <string name="add_summary">Summary</string>
    <string name="add_add">Add</string>

    <string name="tab_completed">Completed</string>
    <string name="tab_in_progress">In Progress</string>
    <string name="tab_planned">Planned</string>

    <string name="info_completed">Completed</string>
    <string name="info_in_progress">In Progress</string>
    <string name="info_planned">Planned to Watch</string>

    <string name="item_expand">Expand</string>
    <string name="item_expand_open">Close</string>
    <string name="item_watched_movie">Watched</string>
    <string name="item_watched_tv">+</string>
    <string name="item_minus">-</string>
    <string name="item_watched_move_to">Move To…</string>


    <string name="dialog_autoadd_title">Move to Completed?</string>
    <string name="dialog_autoadd_message">Looks like you\'ve completed watching %1$s! Would you like to move it to the completed tab?</string>
    <string name="dialog_autoadd_decline">Cancel</string>
    <string name="dialog_autoadd_accept">Move</string>

    <string name="dialog_move_title">Move to</string>
    <string name="dialog_move_message">Where would you like to move %1$s to?</string>

    <string name="add_media_missing">Please fill in the required fields</string>
    <string name="undo_delete">Undo</string>
    <string name="success_delete">Successfully deleted %1$s</string>
</resources>