<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMediaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/et_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_title"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioGroup
                android:id="@+id/rb_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Television Show" />

                <RadioButton
                    android:id="@+id/rb_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Movie" />

            </RadioGroup>

            <TextView
                android:id="@+id/tv_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_search" />

            <ImageButton
                android:id="@+id/btn_reset"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_notification_clear_all" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_weight="0"
                tools:src="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/btn_upload"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:backgroundTint="@color/colorAccent"
                android:src="@android:drawable/ic_menu_upload" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_genres"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_runtime_tv"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_currentepisode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_progress_tv"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_summary"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>